--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Flyway migrations -->
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql -->
         <dependency>
             <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>11.15.0</version>
         </dependency>
 
 <!--        &lt;!&ndash; Redis (Lettuce is provided by Spring Boot) &ndash;&gt;-->
