--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=fbadsbe2
+
+#port
+
+server.port=1234
+
+jwt.secret=change_this_to_a_strong_secret_that_is_long_enough_for_hmac
+jwt.expiration-ms=3600000
+
+spring.datasource.url=jdbc:mysql://localhost:3306/n8n_be?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+# Redis (defaults)
+#spring.redis.host=localhost
+#spring.redis.port=6379
+
+# OpenAPI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
