feat: Implement Scheduled Posts feature with AI content generation and auto-publishing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,21 @@ spring.flyway.locations=classpath:db/migration
 # OpenAPI
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+
+# Gemini API Configuration
+# Get your API key from: https://ai.google.dev/
+gemini.api.key=${GEMINI_API_KEY:}
+gemini.api.base-url=https://generativelanguage.googleapis.com
+gemini.api.model=gemini-2.0-flash-exp
+
+# Facebook API Configuration (optional)
+# For publishing posts to Facebook
+facebook.api.access-token=${FACEBOOK_ACCESS_TOKEN:}
+facebook.api.app-id=${FACEBOOK_APP_ID:}
+facebook.api.base-url=https://graph.facebook.com/v18.0
+
+# Scheduler Configuration
+# Enable/disable scheduled tasks
+spring.task.scheduling.enabled=true
+scheduler.post-publisher.enabled=true
+scheduler.trend-analysis.enabled=true
