--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=1234
 jwt.secret=change_this_to_a_strong_secret_that_is_long_enough_for_hmac
 jwt.expiration-ms=3600000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/n8n_be?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.2.149:3306/n8n_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1
 
@@ -36,7 +36,7 @@ gemini.api.model=gemini-2.0-flash-exp
 # For publishing posts to Facebook
 facebook.api.access-token=${FACEBOOK_ACCESS_TOKEN:}
 facebook.api.app-id=${FACEBOOK_APP_ID:}
-facebook.api.base-url=https://graph.facebook.com/v18.0
+facebook.api.base-url=https://graph.facebook.com/v24.0
 
 # Scheduler Configuration
 # Enable/disable scheduled tasks
