--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=1234
 jwt.secret=change_this_to_a_strong_secret_that_is_long_enough_for_hmac
 jwt.expiration-ms=3600000
 
-spring.datasource.url=jdbc:mysql://192.168.2.149:3306/n8n_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/n8n_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1
 
@@ -43,3 +43,26 @@ facebook.api.base-url=https://graph.facebook.com/v24.0
 spring.task.scheduling.enabled=true
 scheduler.post-publisher.enabled=true
 scheduler.trend-analysis.enabled=true
+
+# Logging Configuration
+# Root logging level
+logging.level.root=INFO
+# Application logging
+logging.level.org.uvhnael.fbadsbe2=INFO
+# Security and authentication logging
+logging.level.org.uvhnael.fbadsbe2.security=INFO
+logging.level.org.uvhnael.fbadsbe2.config.LoggingConfig=INFO
+# Spring Security logging
+logging.level.org.springframework.security=DEBUG
+# SQL logging (already enabled via spring.jpa.show-sql)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Log pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Log file (optional - uncomment to enable file logging)
+#logging.file.name=logs/fbadsbe2.log
+#logging.file.max-size=10MB
+#logging.file.max-history=30
