chore: reduce logging verbosity to show only API requests/responses
- Set root logging level to WARN
- Disable Spring Security debug logs (WARN level)
- Disable Spring Web verbose logs (WARN level)
- Turn off Hibernate SQL logging completely
- Keep only custom API logging interceptor messages (INFO)
- Clean up console output to show only essential request/response logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=1
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+# spring.jpa.show-sql=true
 
 # Flyway
 spring.flyway.enabled=true
@@ -46,17 +46,18 @@ scheduler.trend-analysis.enabled=true
 
 # Logging Configuration
 # Root logging level
-logging.level.root=INFO
+logging.level.root=WARN
 # Application logging
 logging.level.org.uvhnael.fbadsbe2=INFO
 # Security and authentication logging
-logging.level.org.uvhnael.fbadsbe2.security=INFO
+logging.level.org.uvhnael.fbadsbe2.security=WARN
 logging.level.org.uvhnael.fbadsbe2.config.LoggingConfig=INFO
 # Spring Security logging
-logging.level.org.springframework.security=DEBUG
-# SQL logging (already enabled via spring.jpa.show-sql)
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=WARN
+logging.level.org.springframework.web=WARN
+# SQL logging
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
 
 # Log pattern
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
