feat(insights): enhance CTA detection with beauty-specific keywords and improve code quality
- Add comprehensive beauty industry CTA keywords (booking, consultation, offers)
- Refactor CTA detection logic with dedicated helper method
- Remove mock response fallback from GeminiService
- Update Gemini model to gemini-2.5-flash
- Add INFO level logging configuration
- Enable SQL logging for debugging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,9 +28,9 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 # Gemini API Configuration
 # Get your API key from: https://ai.google.dev/
-gemini.api.key=${GEMINI_API_KEY:}
+gemini.api.key=
 gemini.api.base-url=https://generativelanguage.googleapis.com
-gemini.api.model=gemini-2.0-flash-exp
+gemini.api.model=gemini-2.5-flash
 
 # Facebook API Configuration (optional)
 # For publishing posts to Facebook
@@ -43,3 +43,27 @@ facebook.api.base-url=https://graph.facebook.com/v24.0
 spring.task.scheduling.enabled=true
 scheduler.post-publisher.enabled=true
 scheduler.trend-analysis.enabled=true
+
+# Logging Configuration
+# Root logging level
+logging.level.root=INFO
+# Application logging
+logging.level.org.uvhnael.fbadsbe2=INFO
+# Security and authentication logging
+logging.level.org.uvhnael.fbadsbe2.security=INFO
+logging.level.org.uvhnael.fbadsbe2.config.LoggingConfig=INFO
+# Spring Security logging
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web=INFO
+# SQL logging
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+
+# Log pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Log file (optional - uncomment to enable file logging)
+#logging.file.name=logs/fbadsbe2.log
+#logging.file.max-size=10MB
+#logging.file.max-history=30
